@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2012 Doom9 & al
+// Copyright (C) 2005-2013 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -74,11 +74,6 @@ new JobProcessorFactory(new ProcessorFactory(init), "FFmpegEncoder");
                 return line.Substring(6, frameNumberEnd - 6).Trim();
             }
             return null;
-        }
-
-        protected override bool checkExitCode
-        {
-            get { return true; }
         }
 
         public override string GetErrorString(string line, StreamType stream)
